--- a/templates/public/contact.html.twig
+++ b/templates/public/contact.html.twig
@@ -106,7 +106,7 @@
 <!-- ============================ Agency List End ================================== -->
 
 <!-- ============================ Newsletter Start ================================== -->
-<section class="newsletter theme-bg" style="background-image:url(../public/assets/img/bg-new.png)">
+<section class="newsletter theme-bg" style="background-image:url(../../public/assets/img/bg-new.png)">
     <div class="container">
 
         <div class="row justify-content-center">
