--- a/templates/public/login.html.twig
+++ b/templates/public/login.html.twig
@@ -44,7 +44,7 @@
 <!-- ============================ Login End ================================== -->
 
 <!-- ============================ Newsletter Start ================================== -->
-<section class="newsletter theme-bg" style="background-image:url(../public/assets/img/bg-new.png)">
+<section class="newsletter theme-bg" style="background-image:url(../../public/assets/img/bg-new.png)">
     <div class="container">
 
         <div class="row justify-content-center">
