--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,8 +26,8 @@
                     <div class="header dark-header nav-left-side">
                         <nav class="headnavbar">
                             <div class="nav-header">
-                                <a href="#" class="brand normal-logo"><img src="assets/img/logo-light.png" alt="" /></a>
-                                <a href="#" class="brand brand-overlay"><img src="assets/img/logo-light.png" alt="" /></a>
+                                <a href="#" class="brand normal-logo"><img src="assets/img/new-logo.png" alt="" /></a>
+                                <a href="#" class="brand brand-overlay"><img src="assets/img/new-logo.png" alt="" /></a>
                                 <button class="toggle-bar"><span class="ti-align-justify"></span></button>
                             </div>
                             <ul class="menu">
@@ -248,7 +248,7 @@
 
                                     <div class="col-lg-4 col-md-6">
                                         <div class="footer-widget">
-                                            <img src="assets/img/logo-light.png" class="img-fluid f-logo" alt="" />
+                                            <img src="assets/img/new-logo.png" class="img-fluid f-logo" alt="" />
                                             <p>407-472 Rue Saint-Sulpice, Montreal<br>Quebec, H2Y 2V8</p>
                                             <ul class="footer-bottom-social">
                                                 <li><a href="#"><i class="ti-facebook"></i></a></li>
@@ -262,7 +262,7 @@
                                         <div class="footer-widget">
                                             <h4 class="widget-title">Useful links</h4>
                                             <ul class="footer-menu">
-                                                <li><a href="about-us.html">About Us</a></li>
+                                                <li><a href="about">About Us</a></li>
                                                 <li><a href="faq.html">FAQs Page</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="login">Login</a></li>
@@ -326,6 +326,23 @@
                 {% endblock %}
             </div>
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/circleMagic.min.js"></script>
+            <script src="assets/js/popper.min.js"></script>
+            <script src="assets/js/bootstrap.min.js"></script>
+            <script src="assets/js/rangeslider.js"></script>
+            <script src="assets/js/select2.min.js"></script>
+            <script src="assets/js/aos.js"></script>
+            <script src="assets/js/owl.carousel.min.js"></script>
+            <script src="assets/js/jquery.magnific-popup.min.js"></script>
+            <script src="assets/js/slick.js"></script>
+            <script src="assets/js/slider-bg.js"></script>
+            <script src="assets/js/lightbox.js"></script>
+            <script src="assets/js/imagesloaded.js"></script>
+            <script src="assets/js/isotope.min.js"></script>
+            <script src="assets/js/coreNavigation.js"></script>
+            <script src="assets/js/custom.js"></script>
+        {% endblock %}
     </body>
 </html>
